--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@ Link: https://www.aut0ps.github.io/DevSecOps/
 -->
 </head>
 
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TL4LWQMV96"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TL4LWQMV96');
+</script>
+
+
 <body>
 
     <!-- ***** Preloader Start ***** -->
