--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-NMBHTRX5');</script>
 <!-- End Google Tag Manager -->
 
+    <!-- Start TapLink -->
+    <script src="//taplink.cc/id:11412528/widget/" async></script>
+    <!-- End TapLink -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="AutOps Website">
